--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -1,20 +1,34 @@
-<!DOCTYPE html>
+{% extends "layout/default.html.twig" %}
 
-<title>Hello CategoryController!</title>
+{% block title %}Page Catégorie
+{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block header %}
+	<!-- Page Header-->
+	<header class="masthead" style="background-image: url('{{asset('assets/img/contact-bg.jpg')}}')">
+		<div class="container position-relative px-4 px-lg-5">
+			<div class="row gx-4 gx-lg-5 justify-content-center">
+				<div class="col-md-10 col-lg-8 col-xl-7">
+					<div class="site-heading">
+						<h1>Categories</h1>
+						<span class="subheading">Category...</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+{% endblock %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+{% block content %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/Acs/Desktop/symfony/clean_blog/src/Controller/CategoryController.php'|file_link(0) }}">src/Controller/CategoryController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/Acs/Desktop/symfony/clean_blog/templates/category/index.html.twig'|file_link(0) }}">templates/category/index.html.twig</a></code></li>
-    </ul>
-</div>
+	{% for category in categorys %}
+
+		<div class="categorie">
+			<p>{{category.id}}</p>
+			<p>{{category.name}}</p>
+		</div>
+	{% endfor %}
+
+
+
 {% endblock %}
