--- a/templates/layout/default.html.twig
+++ b/templates/layout/default.html.twig
@@ -30,8 +30,9 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/home/about">About</a></li>
                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/post/create">Add Post</a></li>
+                           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/category">Categories</a></li>
                         {# <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Posts</a></li> #}
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact/create">Contact</a></li>
                     </ul>
                 </div>
             </div>
