--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -15,6 +15,8 @@
                             <h2 class="post-title">{{post.Titre}}</h2>
                             <h3 class="post-subtitle">{{post.Description}}</h3>
                         </a>
+                        <a href="/category"> <h5 class="post-subtitle small">{{post.category.name}}</h5></a>
+                         
                         <p class="post-meta">
                             Posted by
                             <a href="#!">Start Bootstrap</a>
