--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -16,7 +16,7 @@
                             <h3 class="post-subtitle">{{post.Description}}</h3>
                         </a>
                         
-                        <a href="/category/{{post.category.id}}">{{post.category.name}}</a>
+                        <a  class="type-category" href="/category/{{post.category.id}}">{{post.category.name}}</a>
                          
                         <p class="post-meta">
                             Posted by
