--- a/templates/layout/default.html.twig
+++ b/templates/layout/default.html.twig
@@ -29,10 +29,17 @@
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/home/about">About</a></li>
-                           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/post/create">Add Post</a></li>
-                           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/category">Categories</a></li>
                         {# <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Posts</a></li> #}
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact/create">Contact</a></li>
+                        
+                        {% if app.user %}
+                           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/post/create">Add Post</a></li>
+                           <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/category">Categories</a></li>
+                          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/logout">Log Out</a></li>
+                          <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/register">Register</a></li>
+                        {% else %}
+                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/login">Log In</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
