modifier une categorie (edit) et correction ajouter une categorie (create)

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -12313,3 +12313,16 @@ textarea {
   margin:0 auto;
   margin-bottom: 2rem;
 }
+
+.btn-register{
+  margin-left: 26rem;
+  margin-top: -9rem;
+}
+
+.required{
+
+}
+
+#registration_from_email{
+  
+}
