--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -41,4 +41,5 @@
 			Sign in
 		</button>
 	</form>
+	<a href="/register"><button class=" btn-register btn btn-lg btn-primary" type="submit">Register</button></a> 
 {% endblock %}
