--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -26,7 +26,7 @@
 
 				<form class="d-flex flex-column" action="/category/edit/{{category.id}}" method='POST'>
 					<label for="">Modifier le nom de la catégorie</label>
-					<input type="text" name="nom" value={{category.name}}>
+					<input type="text" name="nom" value="{{category.name}}">
 					<button class="btn btn-lg btn-primary" type="submit" name="submit">SEND</button>
 				</form>
 			</div>
