--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,6 +4,8 @@
 
 
 {% block content %}
+
+<div class="formulaire-inscription">
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
@@ -15,4 +17,5 @@
 
         <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
+    </div>
 {% endblock %}
