--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -12,8 +12,8 @@
 				<div class="col-md-10 col-lg-8 col-xl-7">
 					<div class="site-heading">
 						<div class="post-heading">
-								<h1 class="post-title">{{post.Titre}}</h1>
-								<h2 class="post-subtitle">{{post.Description}}</h2>
+							<h1 class="post-title">{{post.Titre}}</h1>
+							<h2 class="post-subtitle">{{post.Description}}</h2>
 							<p class="meta">
 								Posted by
 								<a href="#!">Start Bootstrap</a>
@@ -59,5 +59,11 @@
 		</div>
 	</article>
 
-	{# {{form(form)}} #}
+	{# {% if is_granted ('ROLE_USER') %} #}
+		<form class="d-flex flex-column w-50 m-auto" action="" method="POST">
+			<label for="">Ajouter un commentaire</label>
+			<input type="text" id="input-comment">
+			<button class="btn btn-primary w-25" id="btn-comment" type="button">OK</button>
+		</form>
+	{# {% endif %} #}
 {% endblock %}
