--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -12325,7 +12325,7 @@ textarea {
   width: 50%;
 }
 
-.commentaire {
+.comment {
   width: 50%;
   margin: 0 auto;
   /* border: 0.5px solid black; */
@@ -12345,4 +12345,8 @@ textarea {
 .contenu-commentaire{
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.user-commentaire{
+  font-weight: 500;
 }
