ajout et suppression d'un like

--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -1,37 +1,58 @@
 {% extends "layout/default.html.twig" %}
 
-{% block title %}Page index de Posts{% endblock %}
+{% block title %}Page index de Posts
+{% endblock %}
 
 {% block content %}
-  <!-- Main Content-->
-        <div class="container px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
-                    <!-- Post preview-->
+	<!-- Main Content-->
+	<div class="container px-4 px-lg-5">
+		<div class="row gx-4 gx-lg-5 justify-content-center">
+			<div
+				class="col-md-10 col-lg-8 col-xl-7">
+				<!-- Post preview-->
 
-                    {% for post in posts %}
-                    <div class="post-preview">
-                        <a href="/post/{{post.id}}">
-                            <h2 class="post-title">{{post.Titre}}</h2>
-                            <h3 class="post-subtitle">{{post.Description}}</h3>
-                        </a>
-                        
-                        <a  class="type-category" href="/category/{{post.category.id}}">{{post.category.name}}</a>
-                         
-                        <p class="post-meta">
-                            Posted by
-                            <a href="#!">Start Bootstrap</a>
-                            on {{post.CreatedAt|date("m/d/Y")}}
-                        </p>
-                    </div>
-                    <!-- Divider-->
-                    <hr class="my-4" />
+				{% for post in posts %}
+					<div class="post-preview">
+						<a href="/post/{{post.id}}">
+							<h2 class="post-title">{{post.Titre}}</h2>
+							<h3 class="post-subtitle">{{post.Description}}</h3>
+						</a>
 
-                     {% endfor %}
-                    <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
-                </div>
-            </div>
-        </div>
-       
+						<a class="type-category" href="/category/{{post.category.id}}">{{post.category.name}}</a>
+
+
+						<p class="post-meta">
+							Posted by
+							<a href="#!">Start Bootstrap</a>
+							on
+							{{post.CreatedAt|date("m/d/Y")}}
+							<button class="like" id="add-like">
+								<span></span>
+								{# <i class="fa-solid fa-thumbs-up"></i> #}
+								<span>&#128077; Like</span>
+							</button>
+						</p>
+
+					</div>
+
+
+					<!-- Divider-->
+					<hr class="my-4"/>
+
+
+				{% endfor %}
+				<!-- Pager-->
+				<div class="d-flex justify-content-end mb-4">
+					<a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+{% endblock %}
+
+{% block javascripts %}
+	<script>
+
+	</script>
 {% endblock %}
