--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -12342,11 +12342,33 @@ textarea {
   justify-content: end;
 }
 
-.contenu-commentaire{
+.contenu-commentaire {
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
-.user-commentaire{
+.user-commentaire {
   font-weight: 500;
+}
+
+.like {
+  background: lavender;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  margin-left: 10px;
+}
+
+.block-like {
+  background: lavender;
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+}
+
+.add-comment {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 44%;
 }
