--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -36,10 +36,13 @@
 		            </label>
 		        </div>
 		    #}
-
+		
 		<button class="btn btn-lg btn-primary" type="submit">
 			Sign in
 		</button>
+	
 	</form>
-	<a href="/register"><button class=" btn-register btn btn-lg btn-primary" type="submit">Register</button></a> 
+	<div class="btn-register">
+	<a href="/register">Register</a> 
+	</div>
 {% endblock %}
