--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -27,7 +27,7 @@
 
 			<a href="/post/{{post.id}}">
 				<h2 class="post-title">{{post.Titre}}</h2>
-				<h3 class="post-subtitle">{{post.Description}}</h3>
+				<h3 class="post-subtitle">{{post.Description|raw}}</h3>
 			</a>
 
 			<p class="post-meta">
