--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -15,7 +15,7 @@
 					<div class="post-preview">
 						<a href="/post/{{post.id}}">
 							<h2 class="post-title">{{post.Titre}}</h2>
-							<h3 class="post-subtitle">{{post.Description}}</h3>
+							<h3 class="post-subtitle">{{post.Description|raw}}</h3>
 						</a>
 
 						<a class="type-category" href="/category/{{post.category.id}}">{{post.category.name}}</a>
